--- a/geekshop/mainapp/templates/mainapp/base.html
+++ b/geekshop/mainapp/templates/mainapp/base.html
@@ -7,32 +7,74 @@
     <title>
       {% block title %}
         {{ title|title }}
-      {% ednblock %}
+      {% endblock %}
     </title>
-    {% bloc css %}
+    {% block css %}
       <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
       <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700&display=swap" rel="stylesheet">
     {% endblock %}
 
     {% block js %}
     {% endblock %}
   </head>
   <body>
-      <div class="container">
+    <div class="container">
+      {% block content %}
+
         {% block menu %}
 
         {% endblock %}
 
-        {% block content %}
+      {% endblock %}
 
-        {% endblock %}
+    </div>
 
+{% block footer %}
+  <footer class="footer">
+    <div class="footer-col">
+      <div class="footer-column-1">
+          <h3 class="footer-header">Contact Us</h3>
+          <p class="footer-p">132A Bridge Road Richmond VIC Australia.</p>
+          <p class="footer-p">Talk to us on 1300 132 info@interior.com</p>
       </div>
-
-    {% block footer %}
-      <div class="footer">
-        <!-- //FIXIT: Не хватает нескольких div из методички №1 -->
+      <h3 class="footer-header">Useful Information</h3>
+      <div class="footer-menu">
+        <ul class="footer-submenu">
+          <li class="footer-menu-link"><a href="#" class="footer-menu-link-a">Sales terms</a></li>
+          <li class="footer-menu-link"><a href="#" class="footer-menu-link-a">Customer care</a></li>
+          <li class="footer-menu-link"><a href="#" class="footer-menu-link-a">Delivery</a></li>
+        </ul>
+        <ul class="footer-submenu">
+          <li class="footer-menu-link"><a href="#" class="footer-menu-link-a">Architect accounts</a></li>
+          <li class="footer-menu-link"><a href="#" class="footer-menu-link-a">Careers</a></li>
+          <li class="footer-menu-link"><a href="#" class="footer-menu-link-a">Exchanges & returns</a></li>
+        </ul>
       </div>
-    {% endblock %}
+      <div class="footer-column-2">
+        </div>
+        <div class="footer-column-3">
+          <h3 class="footer-header">Let’s Stay in Touch!</h3>
+          <p class="footer-p">Suscribe to know about our latest news, products and special offers just for suscribers.</p>
+          <div class="form-email">
+            <form action="#" class="">
+                <input type="email" placeholder="your email address" class="email">
+            </form>
+            <i class="fa fa-paper-plane"></i>
+          </div>
+        </div>
+    </div>
+    <div class="copyright">
+      <p class="copy">© Copyright - INTERIOR {% now "Y" %}. All Rights Reserved.</p>
+      <div class="social">
+          <a href="#" class="social1"></a>
+          <a href="#" class="social2"></a>
+          <a href="#" class="social3"></a>
+          <a href="#" class="social4"></a>
+      </div>
+      <a href="#" class="terms">Terms & Conditions / Privacy policy & Cookies</a>
+    </div>
+  </footer>
+{% endblock %}
   </body>
 </html>
