--- a/geekshop/mainapp/templates/mainapp/index.html
+++ b/geekshop/mainapp/templates/mainapp/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
+{% extends 'mainapp/base.html' %}
 {% load staticfiles %}
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Магазин</title>
-  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-  <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700&display=swap" rel="stylesheet">
+  <title>
+    {% block title %}
+      Магазин
+    {% endblock %}
+  </title>
 </head>
 <body>
   <div class="container">
+    {% block content %}
     <div class="slider">
-      <div class="header clearfix">
-        <a href="/" class="logo"></a>
-        <ul class="menu">
-          <li><a href="{% url 'main' %}" class="active">домой</a></li>
-          <li><a href="{% url 'products' %}">продукты</a></li>
-          <li><a href="{% url 'contacts' %}">контакты</a></li>
-        </ul>
-        <a href="#" class="search"></a>
-        <a href="#" class="basket"></a>
-      </div>
+      {% include 'mainapp/includes/inc_mainmenu.html' %}
       <div class="text-slider">
         <h3 class="green">тенденции</h3>
         <h3 class="big"> удобные стулья</h3>
@@ -201,7 +195,9 @@
         </section>
 
         <div class="clr"></div>
+        {% endblock %}
 
+        {% block footer %}
         <footer class="footer">
             <div class="footer-col">
                 <div class="footer-column-1">
@@ -236,10 +232,7 @@
                 </div>
             </div>
             <div class="copyright">
-              <script>
-                let year = new Date();
-                document.write(`<p class="copy">© Copyright - INTERIOR ${year.getFullYear()}. All Rights Reserved.</p>`);
-              </script>
+                <p class="copy">© Copyright - INTERIOR {% now "Y" %}. All Rights Reserved.</p>
                 <div class="social">
                     <a href="#" class="social1"></a>
                     <a href="#" class="social2"></a>
@@ -249,6 +242,7 @@
                 <a href="#" class="terms">Terms & Conditions / Privacy policy & Cookies</a>
             </div>
         </footer>
+        {% endblock %}
   </div>
 </body>
 </html>
