--- a/geekshop/mainapp/templates/mainapp/products.html
+++ b/geekshop/mainapp/templates/mainapp/products.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+{% extends 'mainapp/base.html' %}
 {% load staticfiles %}
 <html>
 <head>
-<meta charset="utf-8">
-<title>Каталог</title>
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
-<link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
+  <title>
+    {% block title %}
+      Каталог
+    {% endblock %}
+  </title>
 </head>
 <body>
   <div class="container">
