--- a/geekshop/mainapp/templates/mainapp/index.html
+++ b/geekshop/mainapp/templates/mainapp/index.html
@@ -29,10 +29,12 @@
                     <li class="product-tab product-tab-active">Featured</li>
                     <li class="product-tab">New</li>
                 </ul>
-                <a href="#" class="explore">explore all <img src="{% static 'img/arrow.svg' %}" alt=""> </a> </div> <div class="product-list">
+                <a href="#" class="explore">explore all <img src="{% static 'img/arrow.svg' %}" alt=""></a></div>
+                <div class="product-list">
                     <div class="product1">
                         <div class="hover-description1">
-                            <a href="#" class="button-order">
+                            <!-- <a href="#" class="button-order"> -->
+                            <a href="#" class="hover-button">
                               <img src="{% static 'img/arrow.svg' %}" alt="" class="hover-button-arrow"></a>
                             <h3 class="hover-header">Fishnet Chair</h3>
                             <p class="hover-p">Seat and back with upholstery made of cold cure foam
