--- a/geekshop/mainapp/templates/mainapp/includes/inc_category_menu.html
+++ b/geekshop/mainapp/templates/mainapp/includes/inc_category_menu.html
@@ -1,14 +1,20 @@
 {% block category_menu %}
       <div class="links clearfix">
         <ul class="links-menu">
-          <!-- <li><a href="#" class="active">все</a></li> -->
-          <!-- <li><a href="#">дом</a></li> -->
-          <!-- <li><a href="#">офис</a></li> -->
-          <!-- <li><a href="#">модерн</a></li> -->
-          <!-- <li><a href="#">классика</a></li> -->
-          {% for link in links_menu %}
-              <li><a href="{% url link.href %}" class="{% if request.resolver_match.url_name == link.href %} active {% endif %}">{{ link.name }} </a></li>
-              {% endfor %}
+            <li>
+                <a href="{% url 'products:category' 0 %}"
+                class="{% if request.resolver_match.kwargs.pk == 0 %}active{% endif %}">
+                все
+            </a>
+        </li>
+        {% for link in links_menu %}
+            <li>
+                <a href="{% url 'products:category' link.pk %}"
+                   class="{% if request.resolver_match.kwargs.pk == link.pk %}active{% endif %}">
+                    {{ link.name }}
+                </a>
+            </li>
+            {% endfor %}
         </ul>
       </div>
 {% endblock %}
