--- a/geekshop/mainapp/templates/mainapp/includes/inc_mainmenu.html
+++ b/geekshop/mainapp/templates/mainapp/includes/inc_mainmenu.html
@@ -1,11 +1,25 @@
 {% block menu %}
   <div class="header clearfix">
-  <a href="{% if request.resolver_match.url_name == 'main' %}#{% else %} {% url 'main' %} {% endif %}" class="logo"></a>
+  <a href="{% if request.resolver_match.url_name == 'main' %}#{% else %}{% url 'main' %}{% endif %}" class="logo"></a>
     <ul class="menu">
-    <li><a href="{% if request.resolver_match.url_name == 'main' %}#{% else %} {% url 'main' %} {% endif %}"
-            class="{% if request.resolver_match.url_name == 'main' %} active {% endif %}">домой</a></li>
-      <li><a href="{% url 'products_all' %}" class="{% if request.resolver_match.url_name == 'products_all' %} active {% endif %}">продукты</a></li>
-      <li><a href="{% url 'contacts' %}" class="{% if request.resolver_match.url_name == 'contacts' %} active {% endif %}">контакты</a></li>
+    <li>
+        <a href="{% if request.resolver_match.url_name == 'main' %}#{% else %}{% url 'main' %}{% endif %}"
+           class="{% if request.resolver_match.url_name == 'main' %}active{% endif %}">
+            домой
+        </a>
+    </li>
+    <li>
+        <a href="{% url 'products:index' %}"
+           class="{% if request.resolver_match.namespace == 'products' %}active{% endif %}">
+            продукты
+        </a>
+    </li>
+    <li>
+        <a href="{% url 'contacts' %}"
+           class="{% if request.resolver_match.url_name == 'contacts' %}active{% endif %}">
+            контакты
+        </a>
+    </li>
     </ul>
     <a href="#" class="search"></a>
     <a href="#" class="basket"></a>
