Добавил команду для заполнения БД

--- a/geekshop/mainapp/templates/mainapp/index.html
+++ b/geekshop/mainapp/templates/mainapp/index.html
@@ -31,6 +31,7 @@
                 </ul>
                 <a href="#" class="explore">explore all <img src="{% static 'img/arrow.svg' %}" alt=""></a></div>
                 <div class="product-list">
+                    <!-- TODO: Сделать вывод товаров в цикле -->
                     <div class="product1">
                         <div class="hover-description1">
                             <!-- <a href="#" class="button-order"> -->
