--- a/geekshop/mainapp/templates/mainapp/products.html
+++ b/geekshop/mainapp/templates/mainapp/products.html
@@ -58,6 +58,7 @@
         <a class="explore" href="#">показать все <img src="{% static 'img/arrow.png' %}" alt=""></a>
       </div>
       <div class="related-products clearfix">
+          <!-- TODO: Сделать вывод товаров в цикле -->
         <div class="block">
           <a href="#"><img src="{% static 'img/product-11.jpg' %}" alt="">
             <div class="text">
