--- a/geekshop/mainapp/templates/mainapp/index.html
+++ b/geekshop/mainapp/templates/mainapp/index.html
@@ -32,7 +32,6 @@
                 <a href="#" class="explore">explore all <img src="{% static 'img/arrow.svg' %}" alt=""></a></div>
 
                 <div class="product-list">
-                    <!-- TODO: Сделать вывод товаров в цикле -->
                     {% for product in product_list %}
                     <div class="product">
                         <img src="{{ product.image.url }}" class="product-img">
@@ -65,18 +64,17 @@
                     <a href="#" class="button-order">Купить <img src="{% static 'img/arrow.svg' %}" alt="" class="arrow"></a></div>
             </div>
         </section>
+
         <section class="trending-product-review padding-site">
             <div class="product-header">
                 <h2 class="tranding-header">Trending Products</h2>
-                <a href="#" class="explore">explore all <img src="{% static 'img/arrow.svg' %}" alt=""> </a>
+                <a href="#" class="explore">explore all <img src="{% static 'img/arrow.svg' %}">
+                </a>
                    </div>
             <div class="trending-product-list">
-                    <a href="#" class="trending-product"><img src="{% static 'img/product-11.jpg' %}" alt=""></a>
-                    <a href="#" class="trending-product"><img src="{% static 'img/product-21.jpg' %}" alt=""></a>
-                    <a href="#" class="trending-product"><img src="{% static 'img/product-31.jpg' %}" alt=""></a>
-                    <a href="#" class="trending-product"><img src="{% static 'img/product-41.jpg' %}" alt=""></a>
-                    <a href="#" class="trending-product"><img src="{% static 'img/product-5.jpg' %}" alt=""></a>
-                    <a href="#" class="trending-product"><img src="{% static 'img/product-6.jpg' %}" alt=""></a>
+                {% for trend in trending_products %}
+                    <a href="#" class="trending-product"><img src="{{ trend.image.url }}" alt="{{ trend.short_desc }}" class="trend-img"></a>
+                    {% endfor %}
             </div>
         </section>
 
@@ -99,54 +97,21 @@
                 <p class="large-product-description-">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black or highly polished chrome.</p>
                 <div class="promo-button">
                     <a href="#" class="button-order">Купить <img src="{% static 'img/arrow.svg' %}" alt="" class="arrow"></a></div>
+            </div>
 
-            </div>
             <div class="small-product-list">
-                <div class="small-product-block1" style="background-image:url( {% static 'img/product-2-sm.jpg' %}" );">
-                    <div class="hover-description-small1">
+                {% for small_product in small_products %}
+                <div class="small-product-block">
+                    <img src="{{ small_product.image.url }}" class="small-product-img">
+                    <div class="hover-description-small">
                         <a href="#" class="hover-button">
                             <img src="{% static 'img/arrow.svg' %}" alt="" class="hover-button-arrow"></a>
-                        <h3 class="hover-header">Fishnet Chair</h3>
-                        <p class="hover-p">Seat and back with upholstery made of cold cure foam
-                            . Steel frame, available in matt powder-coated black
-                            or highly polished chrome.
-                        </p>
+                        <h3 class="hover-header">{{ small_product.name }}</h3>
+                        <p class="hover-p">{{ small_product.short_desc }}</p>
                     </div>
                 </div>
-                <div class="small-product-block2" style="background-image:url( {% static 'img/product-3-sm.jpg' %}" );">
-                    <div class="hover-description-small2">
-                        <a href="#" class="hover-button">
-                            <img src="{% static 'img/arrow.svg' %}" alt="" class="hover-button-arrow"></a>
-                        <h3 class="hover-header">Fishnet Chair</h3>
-                        <p class="hover-p">Seat and back with upholstery made of cold cure foam
-                            . Steel frame, available in matt powder-coated black
-                            or highly polished chrome.
-                        </p>
-                    </div>
-                </div>
-                <div class="small-product-block3" style="background-image:url( {% static 'img/product-4-sm.jpg' %}" );">
-                    <div class="hover-description-small3">
-                        <a href="#" class="hover-button">
-                            <img src="{% static 'img/arrow.svg' %}" alt="" class="hover-button-arrow"></a>
-                        <h3 class="hover-header">Fishnet Chair</h3>
-                        <p class="hover-p">Seat and back with upholstery made of cold cure foam
-                            . Steel frame, available in matt powder-coated black
-                            or highly polished chrome.
-                        </p>
-                    </div>
-                </div>
-                <div class="small-product-block4" style="background-image:url( {% static 'img/product-5-sm.jpg' %}" );">
-                    <div class="hover-description-small4">
-                        <a href="#" class="hover-button">
-                            <img src="{% static 'img/arrow.svg' %}" alt="" class="hover-button-arrow"></a>
-                        <h3 class="hover-header">Fishnet Chair</h3>
-                        <p class="hover-p">Seat and back with upholstery made of cold cure foam
-                            . Steel frame, available in matt powder-coated black
-                            or highly polished chrome.
-                        </p>
-                    </div>
-                </div>
-            </div>
+                {% endfor %}
+
         </section>
 
         <section class="mobile padding-site">
