--- a/geekshop/static/css/style.css
+++ b/geekshop/static/css/style.css
@@ -1287,6 +1287,12 @@ display: block;
     margin-bottom: 10px;
 }
 
+.trend-img {
+    width: 370px;
+    height: 370px;
+    z-index: -1;
+}
+
 .trending-product:hover {
     outline: 1px solid #000;
 }
@@ -1431,7 +1437,7 @@ display: block;
     margin-bottom: 67px;
 }
 
-.small-product-block1 {
+.small-product-block {
     width: 270px;
     height: 270px;
     display: block;
@@ -1439,28 +1445,12 @@ display: block;
     margin-bottom: 30px;
 }
 
-.small-product-block2 {
+.small-product-img {
     width: 270px;
     height: 270px;
-    display: block;
-    position: relative;
 }
 
-.small-product-block3 {
-    width: 270px;
-    height: 270px;
-    display: block;
-    position: relative;
-}
-
-.small-product-block4 {
-    width: 270px;
-    height: 270px;
-    display: block;
-    position: relative;
-}
-
-.hover-description-small1 {
+.hover-description-small {
     display: none;
     position: absolute;
     left: 0;
@@ -1478,74 +1468,10 @@ display: block;
     text-align: center;
 }
 
-.hover-description-small2 {
-    display: none;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 270px;
-    height: 270px;
-    border: 1px solid #9c9c9c;
-    background-color: #ffffff;
-    opacity: 0.9;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    padding: 0px 32px;
-    box-sizing: border-box;
-    text-align: center;
-}
-
-.hover-description-small3 {
-    display: none;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 270px;
-    height: 270px;
-    border: 1px solid #9c9c9c;
-    background-color: #ffffff;
-    opacity: 0.9;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    padding: 0px 32px;
-    box-sizing: border-box;
-    text-align: center;
-}
-
-.hover-description-small4 {
-    display: none;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 270px;
-    height: 270px;
-    border: 1px solid #9c9c9c;
-    background-color: #ffffff;
-    opacity: 0.9;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    padding: 0px 32px;
-    box-sizing: border-box;
-    text-align: center;
-}
-
-.small-product-block1:hover .hover-description-small1{
+.small-product-block:hover .hover-description-small{
     display: flex;
 }
 
-.small-product-block2:hover .hover-description-small2{
-    display: flex;
-}
- .small-product-block3:hover .hover-description-small3{
-    display: flex;
-}
-
-.small-product-block4:hover .hover-description-small4{
-    display: flex;
-}
 .copyright {
     display: flex;
     justify-content: space-between;
