Добавил вывод похожих продуктов на странице products.html в цикле

--- a/geekshop/static/css/style.css
+++ b/geekshop/static/css/style.css
@@ -1071,6 +1071,10 @@ td:first-child {
     display: block;
 }
 
+.related-product-img {
+    height: 370px;
+    weight: 370px;
+}
 /* Мой макет */
 
 .padding-site {
