--- a/geekshop/mainapp/templates/mainapp/products.html
+++ b/geekshop/mainapp/templates/mainapp/products.html
@@ -58,34 +58,17 @@
         <a class="explore" href="#">показать все <img src="{% static 'img/arrow.png' %}" alt=""></a>
       </div>
       <div class="related-products clearfix">
-          <!-- TODO: Сделать вывод товаров в цикле -->
+        {% for product in same_products %}
         <div class="block">
-          <a href="#"><img src="{% static 'img/product-11.jpg' %}" alt="">
+            <a href="#"><img src="{{ product.image.url }}" class="related-product-img" alt="{{ product.short_desc }}">
             <div class="text">
               <img src="{% static 'img/icon-hover.png' %}" alt="img">
-              <h4>Стул повышенного качества</h4>
-              <p>Не оторваться. </p>
+              <h4>{{ product.name }}</h4>
+              <p>{{ product.short_desc }}</p>
             </div>
           </a>
         </div>
-        <div class="block">
-          <a href="#"><img src="{% static 'img/product-21.jpg' %}" alt="">
-            <div class="text">
-              <img src="{% static 'img/icon-hover.png' %}" alt="img">
-              <h4>Стул повышенного качества</h4>
-              <p>Не оторваться. </p>
-            </div>
-          </a>
-        </div>
-        <div class="block">
-          <a href="#"><img src="{% static 'img/product-31.jpg' %}" alt="">
-            <div class="text">
-              <img src="{% static 'img/icon-hover.png' %}" alt="img">
-              <h4>Стул повышенного качества</h4>
-              <p>Не оторваться. </p>
-            </div>
-          </a>
-        </div>
+        {% endfor %}
       </div>
     </div>
   </div>
