--- a/geekshop/authapp/templates/authapp/base.html
+++ b/geekshop/authapp/templates/authapp/base.html
@@ -22,7 +22,7 @@
   <body>
     <div class="container">
         <div class="login">
-          <div class="h2 text-center head">Вход в систему</div>
+            <div class="h2 text-center head">{{ title|capfirst }}</div>
         </div>
         {% block content %}
 
