--- a/geekshop/authapp/templates/authapp/edit.html
+++ b/geekshop/authapp/templates/authapp/edit.html
@@ -9,5 +9,9 @@
     <br>
     <input class="form-control" type="submit" value="Сохранить">
     </form>
-    <button class="btn btn-round form-control last">На главную</button>
+    <div class="user-avatar"><img src="/media/{{ user.avatar|default:'users_avatars/default.jpg' }}
+    "
+    class="user-avatar-img"></div>
+    <button class="btn btn-round form-control last"><a href="{% url 'main' %}">На главную</a>
+    </button>
     {% endblock %}
