--- a/geekshop/authapp/templates/authapp/login.html
+++ b/geekshop/authapp/templates/authapp/login.html
@@ -7,6 +7,8 @@
     {{ login_form.as_p }}
     <br>
     <input class="form-control" type="submit" value="Войти">
-    </form>
+    <button class="btn btn-round form-control last">
     <a href="{% url 'auth:register' %}">Зарегестрироваться</a>
+    </button>
+    </form>
     {% endblock %}
