--- a/geekshop/static/css/style.css
+++ b/geekshop/static/css/style.css
@@ -352,6 +352,7 @@ display: block;
     height: 152px;
     margin-right: 15px;
 }
+
 .title h2 {
     float: left;
     margin-top: 118px;
@@ -1147,6 +1148,7 @@ letter-spacing: 3.6px;
     height: 270px;
     display: block;
     position: relative;
+    margin-bottom: 40px;
 }
 
 .product-img {
@@ -1624,3 +1626,20 @@ display: block;
     color: #6c6c6c;
 }
 
+.user-avatar {
+    margin: 20px 0px;
+    height: 270px;
+    width: 270px;
+}
+
+.user-avatar-img {
+    height: 270px;
+    width: 270px;
+}
+
+.products-title {
+    color: #212121;
+    font-size: 24px;
+    height: 30px;
+    margin: 20px 20px 40px 20px;
+}
