--- a/geekshop/mainapp/templates/mainapp/includes/inc_category_menu.html
+++ b/geekshop/mainapp/templates/mainapp/includes/inc_category_menu.html
@@ -10,7 +10,7 @@
         {% for link in links_menu %}
             <li>
                 <a href="{% url 'products:category' link.pk %}"
-                   class="{% if request.resolver_match.kwargs.pk == link.pk %}active{% endif %}">
+                   class="{% if request.resolver_match.kwargs.pk|add:'0' == link.pk %}active{% endif %}">
                     {{ link.name }}
                 </a>
             </li>
