Добавил вывод горячего предложения на страницы продуктов

--- a/geekshop/static/css/style.css
+++ b/geekshop/static/css/style.css
@@ -364,6 +364,11 @@ html, body {
     line-height: 36px;
 }
 
+.controll {
+    width: 70px;
+    heigh: 70px;
+}
+
 .trending {
     padding-left: 83px;
     padding-right: 83px;
