--- a/geekshop/mainapp/templates/mainapp/includes/inc_mainmenu.html
+++ b/geekshop/mainapp/templates/mainapp/includes/inc_mainmenu.html
@@ -42,7 +42,7 @@
             <span class="basket-qty">
                 {% if basket %}
                 {{ basket.0.total_cost | floatformat:0 }} руб.</a>
-                {{ basket.0.total_quantity | floatformat:0 }}{% endif %} шт.</a>
+                {{ basket.0.total_quantity | floatformat:0 }} шт.{% endif %}</a>
             </span>
     </li>
     </ul>
