--- a/geekshop/mainapp/templates/mainapp/products.html
+++ b/geekshop/mainapp/templates/mainapp/products.html
@@ -39,7 +39,7 @@
         <h3 class="big-bold">{{ hot_product.name }}</h3>
         <h3 class="red">Горячее предложение</h3>
         <p class="price"> {{ hot_product.price }} <span>руб</span></p>
-        <a href="#" class="red-button">
+        <a href="{% url 'basket:add' hot_product.pk %}" class="red-button">
           заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
         </a>
         <div class="description-text">
@@ -55,7 +55,7 @@
       <div class="related-products clearfix">
         {% for product in same_products %}
         <div class="block">
-            <a href="#"><img src="{{ product.image.url }}" class="related-product-img" alt="{{ product.short_desc }}">
+            <a href="{% url 'products:product' product.pk %}"><img src="{{ product.image.url }}" class="related-product-img" alt="{{ product.short_desc }}">
             <div class="text">
               <img src="{% static 'img/icon-hover.png' %}" alt="img">
               <h4>{{ product.name }}</h4>
